--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #a05d3e; }
+  background: #4dc906; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #be15b9; }
+  background: #1f5226; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #65f912; }
+  background: #0e736a; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #866786; }
+  background: #142618; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #340f24; }
+  background: #edda82; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d2af88; }
+  background: #2fdbee; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b2365e; }
+  background: #451e71; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b1fe66; }
+  background: #118571; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #0e45db; }
+  background: #b49dfc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5e3cdd; }
+  background: #061162; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d18735; }
+  background: #45b469; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #8e94e6; }
+  background: #3fe7ad; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9b6cae; }
+  background: #7f0652; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4156c5; }
+  background: #d88f0a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #68f7c4; }
+  background: #f99abb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6ae3ae; }
+  background: #247535; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #3e5196; }
+  background: #e7deba; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #9aa44b; }
+  background: #ea14e9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #6172c0; }
+  background: #8546f7; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #2a2985; }
+  background: #8395bc; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #184571; }
+  background: #770210; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3436bf; }
+  background: #0d6385; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7b29f2; }
+  background: #059d4a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8b8886; }
+  background: #f3f530; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #209140; }
+  background: #17f4f3; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #65a079; }
+  background: #6426e4; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #022855; }
+  background: #2b5ef8; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #060c3d; }
+  background: #b3a558; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #94c535; }
+  background: #ac27cf; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3932d2; }
+  background: #fef92f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ce4a6c; }
+  background: #de1a59; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #087858; }
+  background: #e7de9a; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a8e07a; }
+  background: #e8550a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e9f497; }
+  background: #fd65d6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #cd8bcf; }
+  background: #3a22df; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d56fb9; }
+  background: #d540ae; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e42cb4; }
+  background: #9b56c2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #4c864d; }
+  background: #8965b4; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8303f3; }
+  background: #d89158; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bde2b4; }
+  background: #1f09d8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #70758f; }
+  background: #ad3099; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #88623f; }
+  background: #17f99f; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f549b6; }
+  background: #a97dab; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f70848; }
+  background: #54a0f0; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c8b55b; }
+  background: #415073; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #e38540; }
+  background: #dc6b4c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d04195; }
+  background: #cadeff; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a344dc; }
+  background: #e66229; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #8c9769; }
+  background: #014ae5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a80c45; }
+  background: #a5cc6b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #7e1bbc; }
+  background: #6b641c; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #22fa0a; }
+  background: #327eef; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #5da211; }
+  background: #72c299; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #811f7c; }
+  background: #a99be9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4319d5; }
+  background: #4b8a2f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3e4064; }
+  background: #b587b7; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #113aaa; }
+  background: #27e6c8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a599b6; }
+  background: #2ae58d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #71b321; }
+  background: #eb74b1; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9ee7a4; }
+  background: #f630ca; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #07abb3; }
+  background: #5d904e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #5ca53d; }
+  background: #6c4d94; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #aaceec; }
+  background: #1e437c; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ce094f; }
+  background: #a33a11; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fc3708; }
+  background: #368507; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0a253b; }
+  background: #fdde90; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #246297; }
+  background: #b40803; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #e808b3; }
+  background: #080fcf; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #66f2a5; }
+  background: #7744b8; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #c9ed3c; }
+  background: #3c052a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ce6401; }
+  background: #46e83a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #0360b7; }
+  background: #e6d65d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #4a205b; }
+  background: #0be451; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3c5bb5; }
+  background: #8f4c7d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6325b2; }
+  background: #892af3; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6e3ce7; }
+  background: #503c4a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a15095; }
+  background: #f8562a; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #665275; }
+  background: #aa467d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #767068; }
+  background: #baaa96; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #efc61f; }
+  background: #229261; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ed3cee; }
+  background: #37f158; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d15ad8; }
+  background: #b95556; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #574861; }
+  background: #d1b198; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2f7f08; }
+  background: #bc810e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ada3d3; }
+  background: #6f9d18; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #cf0aea; }
+  background: #b41350; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #4bcd58; }
+  background: #a35185; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #42cc36; }
+  background: #5b090f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #478ee1; }
+  background: #f924c0; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #ca053d; }
+  background: #4077f7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4836fe; }
+  background: #d5ed38; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #03326d; }
+  background: #b64f2f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #ca90db; }
+  background: #a00f19; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9d5355; }
+  background: #e01515; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #5932a2; }
+  background: #73eef6; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d78392; }
+  background: #080728; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #59ceae; }
+  background: #b76b21; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ef554; }
+  background: #efc630; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #874ff6; }
+  background: #32d2af; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #224227; }
+  background: #aecd84; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14939,10 +14939,18 @@ option {
   font-weight: 600;
   color: #4c4c4c; }
 
+.sec-system-settings-wrapper .page-heading {
+  font-family: 'proxima-regular' !important;
+  color: #4c4c4c !important; }
+
 .system-settings-wrapper .sliding-left-section .device-filterleft-bar {
   margin-top: 0px; }
+  .system-settings-wrapper .sliding-left-section .device-filterleft-bar .filter-icon-group {
+    width: 25px; }
 .system-settings-wrapper .sliding-left-section .nav-pills .nav-link {
   margin: 0px !important; }
+.system-settings-wrapper .tabs-aggre button {
+  padding-left: 8px !important; }
 .system-settings-wrapper .field-section {
   padding: 20px 0px; }
 .system-settings-wrapper .static-routes-div {
@@ -14957,6 +14965,8 @@ option {
     font-size: 24px;
     color: #4c4c4c;
     margin-bottom: 20px; }
+  .system-settings-content-wrapper .summary-details-row .col-lg-6 {
+    padding-left: 0px; }
 
 .field-section .d-flex div {
   width: 100% !important; }
@@ -14999,6 +15009,9 @@ option {
         margin-left: 0px;
         flex-basis: auto;
         text-align: center; }
+
+  .system-settings-content-wrapper .summary-details-row .col-lg-6 {
+    padding-left: 15px; }
 
   .profile-box {
     padding: 10px; }
