--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #4dc906; }
+  background: #ee0f7f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1f5226; }
+  background: #096984; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #0e736a; }
+  background: #528934; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #142618; }
+  background: #51b9ac; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #edda82; }
+  background: #0b492e; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2fdbee; }
+  background: #ea4fbb; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #451e71; }
+  background: #a32927; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #118571; }
+  background: #9374c8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #b49dfc; }
+  background: #8f0ec8; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #061162; }
+  background: #081d1a; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #45b469; }
+  background: #e41d73; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #3fe7ad; }
+  background: #3f979a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7f0652; }
+  background: #b8ab23; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d88f0a; }
+  background: #da5014; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #f99abb; }
+  background: #d5d4c9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #247535; }
+  background: #19facf; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e7deba; }
+  background: #fff86d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ea14e9; }
+  background: #1da1ea; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #8546f7; }
+  background: #bd8aec; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8395bc; }
+  background: #8eb5a6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #770210; }
+  background: #0577a2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #0d6385; }
+  background: #b3f544; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #059d4a; }
+  background: #8e0d53; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f3f530; }
+  background: #2b9a79; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #17f4f3; }
+  background: #027646; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #6426e4; }
+  background: #a502be; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2b5ef8; }
+  background: #439c70; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b3a558; }
+  background: #c635a8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ac27cf; }
+  background: #9d536b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #fef92f; }
+  background: #79f241; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #de1a59; }
+  background: #1e877a; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e7de9a; }
+  background: #6eeaca; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #e8550a; }
+  background: #484122; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #fd65d6; }
+  background: #99ae8b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3a22df; }
+  background: #099776; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #d540ae; }
+  background: #86e627; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9b56c2; }
+  background: #8b6298; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #8965b4; }
+  background: #ba06fb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #d89158; }
+  background: #ae5dcf; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1f09d8; }
+  background: #384464; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ad3099; }
+  background: #0a4382; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #17f99f; }
+  background: #08aee2; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a97dab; }
+  background: #abdf4b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #54a0f0; }
+  background: #148ba0; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #415073; }
+  background: #d6f715; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dc6b4c; }
+  background: #f2f4b8; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #cadeff; }
+  background: #f79a62; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e66229; }
+  background: #8775fa; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #014ae5; }
+  background: #84af90; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a5cc6b; }
+  background: #ffc48c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6b641c; }
+  background: #1ea552; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #327eef; }
+  background: #287f1b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #72c299; }
+  background: #2cd2bd; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a99be9; }
+  background: #18a484; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4b8a2f; }
+  background: #c5b8d7; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b587b7; }
+  background: #d34f60; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #27e6c8; }
+  background: #7065f9; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #2ae58d; }
+  background: #08c140; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #eb74b1; }
+  background: #d7df76; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f630ca; }
+  background: #0f07a9; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5d904e; }
+  background: #200d1d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6c4d94; }
+  background: #7e0e2d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1e437c; }
+  background: #089b14; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a33a11; }
+  background: #7f6b90; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #368507; }
+  background: #0bb031; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #fdde90; }
+  background: #29515d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b40803; }
+  background: #9b454b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #080fcf; }
+  background: #829a12; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #7744b8; }
+  background: #0b2db3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #3c052a; }
+  background: #b6b5d0; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #46e83a; }
+  background: #fd3fe5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e6d65d; }
+  background: #879b69; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0be451; }
+  background: #42642a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8f4c7d; }
+  background: #03503f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #892af3; }
+  background: #94a708; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #503c4a; }
+  background: #f95521; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #f8562a; }
+  background: #2c7697; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #aa467d; }
+  background: #a1473f; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #baaa96; }
+  background: #0d3351; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #229261; }
+  background: #7a96c1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #37f158; }
+  background: #2156a7; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b95556; }
+  background: #52ea8e; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d1b198; }
+  background: #605561; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #bc810e; }
+  background: #e06262; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6f9d18; }
+  background: #4d15e6; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b41350; }
+  background: #c59f5a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a35185; }
+  background: #2e4254; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5b090f; }
+  background: #5a877b; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f924c0; }
+  background: #43238e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4077f7; }
+  background: #f2d1d4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d5ed38; }
+  background: #6bb7db; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #b64f2f; }
+  background: #6a155e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a00f19; }
+  background: #508ac7; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e01515; }
+  background: #fb1968; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #73eef6; }
+  background: #7ada91; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #080728; }
+  background: #3ff4d3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b76b21; }
+  background: #02b77c; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #efc630; }
+  background: #6ca1d4; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #32d2af; }
+  background: #ce2e40; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #aecd84; }
+  background: #d6312b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14938,6 +14938,64 @@ option {
   font-size: 16px;
   font-weight: 600;
   color: #4c4c4c; }
+
+.dashoard-dropdwon-btns-div {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  text-align: left;
+  grid-gap: 10px; }
+  .dashoard-dropdwon-btns-div .dropdown-toggle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 200px;
+    background: #fff;
+    padding: 12px;
+    border: 1px solid #CDCDD6; }
+  .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown {
+    width: auto !important; }
+    .dashoard-dropdwon-btns-div .dropdown-more-wrapper .dashboard-title-menu-dropdown a:last-child {
+      border: 0px solid #776FFF;
+      padding: 0.5rem 1.5rem;
+      margin: 0px auto;
+      width: auto;
+      text-align: left;
+      border-radius: 0px;
+      color: #4c4c4c; }
+  .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown {
+    top: -3px !important;
+    width: 100%;
+    border-radius: 0px; }
+    .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a:nth-child(1) {
+      border-bottom: 0px solid #a3a2a2;
+      margin-bottom: 0px; }
+    .dashoard-dropdwon-btns-div .dashboard-title-menu-dropdown a:last-child {
+      border: 1px solid #776FFF;
+      padding: 10px 9px;
+      margin: 0px auto;
+      width: 136px;
+      text-align: center;
+      border-radius: 4px;
+      color: #776fff; }
+  .dashoard-dropdwon-btns-div .dropdown-item {
+    font-size: 13px;
+    color: #4c4c4c; }
+
+.dashboard-search-with-dropdown {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  grid-gap: 10px; }
+  .dashboard-search-with-dropdown .dashboard-title-menu-dropdown {
+    border-radius: 0px; }
+    .dashboard-search-with-dropdown .dashboard-title-menu-dropdown a:nth-child(1) {
+      border-bottom: 0px solid #a3a2a2;
+      margin-bottom: 0px; }
+  .dashboard-search-with-dropdown .dropdown-toggle {
+    padding: 12px;
+    background: #fff;
+    border: 1px solid #CDCDD6; }
 
 .sec-system-settings-wrapper .page-heading {
   font-family: 'proxima-regular' !important;
