--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -3539,6 +3539,81 @@ margin-top: 12px;
   }
 }
 //New css start here
+.dashoard-dropdwon-btns-div {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  text-align: left;
+  grid-gap: 10px; 
+
+.dropdown-toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 200px;
+  background: #fff;
+  padding: 12px;
+  border: 1px solid #CDCDD6;
+}
+.dropdown-more-wrapper {
+  .dropdown-more {
+
+  }
+  .dashboard-title-menu-dropdown {
+    width: auto !important;
+    a:last-child {
+      border: 0px solid #776FFF;
+  padding:0.5rem 1.5rem;
+  margin: 0px auto;
+  width: auto;
+  text-align: left;
+  border-radius: 0px;
+  color: #4c4c4c;
+    }
+  }
+}
+.dashboard-title-menu-dropdown { 
+  top: -3px !important;
+  width: 100%;
+  border-radius: 0px;
+  a:nth-child(1){
+    border-bottom: 0px solid #a3a2a2;
+margin-bottom: 0px;
+  }
+  a:last-child {
+    border: 1px solid #776FFF;
+padding: 10px 9px;
+margin: 0px auto;
+width: 136px;
+text-align: center;
+border-radius: 4px;
+color: #776fff;
+  }
+}
+.dropdown-item {
+  font-size: 13px;
+  color: #4c4c4c;
+}
+}
+.dashboard-search-with-dropdown {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  grid-gap: 10px;
+  .dashboard-title-menu-dropdown {
+    border-radius: 0px;
+    a:nth-child(1) {
+      border-bottom: 0px solid #a3a2a2;
+margin-bottom: 0px;
+    }
+  }
+  .dropdown-toggle {
+    padding: 12px;
+background: #fff;
+border: 1px solid #CDCDD6;
+  }
+}
+
 .sec-system-settings-wrapper {
   .page-heading {
     font-family: 'proxima-regular' !important;
